--- a/MyBruteForceAll/MyBruteForceAll.UWP/MyBruteForceAll.UWP.csproj
+++ b/MyBruteForceAll/MyBruteForceAll.UWP/MyBruteForceAll.UWP.csproj
@@ -157,6 +157,11 @@
       <Name>MyBruteForceAll</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <SDKReference Include="WindowsDesktop, Version=10.0.15063.0">
+      <Name>Windows Desktop Extensions for the UWP</Name>
+    </SDKReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
